added scroll to top function and footer links

--- a/main.css
+++ b/main.css
@@ -850,6 +850,7 @@ footer .logo {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 600;
+  cursor: pointer;
 }
 .footer-menu .back-btn i {
   color: #aecd31;
